Add prefer free formats option for downloads

--- a/Jellyfin.Plugin.FinTube/Pages/downloadPage.html
+++ b/Jellyfin.Plugin.FinTube/Pages/downloadPage.html
@@ -21,6 +21,13 @@
 						<div class="fieldDescription">Your Media file will be stored here assuming JellyFin has Write Permissions, this will also recursively create the folder(s) required</div>
 					</div>
 
+					<div class="checkboxContainer checkboxContainer-withDescription">
+						<label class="emby-checkbox-label">
+							<input id="fintube-preferfreeformat" name="preferfreeformat" type="checkbox" is="emby-checkbox" data-embycheckbox="true" class="emby-checkbox">
+							<span class="checkboxLabel">Prefer free format</span>
+						<span class="checkboxOutline"><span class="material-icons checkboxIcon checkboxIcon-checked check" aria-hidden="true"></span><span class="material-icons checkboxIcon checkboxIcon-unchecked " aria-hidden="true"></span></span></label>
+						<div class="fieldDescription">Will usually download audio as .opus and videos as .webm</div>
+					</div>
 
 					<div class="checkboxContainer checkboxContainer-withDescription">
 						<label class="emby-checkbox-label">
