Fix yt-dlp command format and add res options

--- a/Jellyfin.Plugin.FinTube/Pages/downloadPage.html
+++ b/Jellyfin.Plugin.FinTube/Pages/downloadPage.html
@@ -37,11 +37,14 @@
 						<div class="fieldDescription">Check this if you want to store as mp3, otherwise the file is saved in mp4</div>
 					</div>
 
-					<div id="fintube-videosettings" hidden>
+					<div id="fintube-videosettings">
 						<div class="selectContainer">
 							<label class="inputLabel" for="fintube-videoresolution">Video resolution</label>
 							<select id="fintube-videoresolution" class="emby-input" name="fintube-videoresolution">
 								<option value="">default</option>
+								<option value="240">240p</option>
+								<option value="360">360p</option>
+								<option value="480">480p</option>
 								<option value="720">720p</option>
 								<option value="1080" selected>1080p</option>
 								<option value="1440">2k</option>
